style(grid, newscard): correct alignment

--- a/src/components/NewsCard/NewsCard.module.scss
+++ b/src/components/NewsCard/NewsCard.module.scss
@@ -4,8 +4,6 @@
   display: flex;
   flex-direction: column;
   gap: 15px;
-  padding-left: 10px;
-  padding-right: 10px;
   width: 100%;
   .cardImage {
     width: 100%;
