--- a/src/style/_grid.scss
+++ b/src/style/_grid.scss
@@ -7,12 +7,14 @@
 .row {
   display: flex;
   flex-wrap: wrap;
-  margin-left: -15px;
-  width: calc(100% + 20px);
+  margin: 0 auto;
+  width: 100%;
 }
 
 .col {
   flex: 1;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 @for $i from 1 through 12 {
